--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,12 +15,14 @@
     "firebase": "^10.7.1",
     "framer-motion": "^10.17.4",
     "react": "^18.2.0",
+    "react-awesome-reveal": "^4.2.7",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.49.2",
     "react-icons": "^4.12.0",
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.21.1",
+    "react-scroll": "^1.9.0",
     "react-share": "^5.0.3",
     "react-toastify": "^9.1.3",
     "sweetalert2": "^11.10.2"
