--- a/backend/.eslintrc.json
+++ b/backend/.eslintrc.json
@@ -1,22 +1,39 @@
 {
-    "env": {
-        "browser": true,
-        "es2021": true
-    },
-    "extends": "eslint:recommended",
-    "parserOptions": {
-        "ecmaVersion": "latest",
-        "sourceType": "module"
-    },
-    "rules": {
-            "indent": [
-                "error"
-           ],
-            "global-require": [
-                "error"
-            ],
-            "handle-callback-err": [
-                "error"
-            ]
-    }
+  "env": {
+    "browser": true,
+    "es2021": true
+  },
+  "extends": "eslint:recommended",
+  "parserOptions": {
+    "ecmaVersion": "latest",
+    "sourceType": "module"
+  },
+  "rules": {
+    "global-require": ["error"],
+    "handle-callback-err": ["error"],
+    "quotes": ["error", "double"],
+    "linebreak-style": "off",
+    "no-trailing-spaces": "error",
+    "indent": ["error", 2],
+    "arrow-parens": ["error", "as-needed"],
+    "new-cap": "off",
+    "quote-props": ["error", "as-needed"],
+    "object-curly-spacing": ["error", "always"],
+    "space-before-function-paren": "off",
+    "max-len": "off",
+    "no-invalid-this": "off",
+    "no-undef": "error",
+    "require-jsdoc": [
+      "error",
+      {
+        "require": {
+          "FunctionDeclaration": false,
+          "MethodDefinition": false,
+          "ClassDeclaration": true,
+          "ArrowFunctionExpression": false,
+          "FunctionExpression": false
+        }
+      }
+    ]
+  }
 }
