--- a/backend/.prettierrc
+++ b/backend/.prettierrc
@@ -1,11 +1,12 @@
 {
     "arrowParens": "avoid",
+    "printWidth": 120,
     "bracketSpacing": true,
     "cursorOffset": -1,
     "insertPragma": false,
-    "tabWidth": 4,
+    "tabWidth": 2,
     "singleQuote": false,
-    "trailingComma": "none",
+    "trailingComma": "all",
     "jsxSingleQuote": false,
     "semi": true
 }
