--- a/backend/package.json
+++ b/backend/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "type": "module",
-  "main": " src/server.js",
+  "main": "./src/server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
+    "start": "node ./src/server.js",
+    "dev": "nodemon ./src/server.js",
     "lint": "eslint .",
     "format": "prettier --log-level warn --write \"src/**/*.js\"",
     "plato": "plato -r -d report src",
