--- a/backend/package.json
+++ b/backend/package.json
@@ -44,7 +44,10 @@
     "nodemailer-express-handlebars": "^6.1.0"
   },
   "devDependencies": {
-    "eslint": "^8.57.0",
+    "@eslint/js": "^9.3.0",
+    "eslint": "^9.3.0",
+    "eslint-config-prettier": "^9.1.0",
+    "globals": "^15.3.0",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.2",
     "nodemon": "^3.0.1",
