--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,10 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.0.1",
-    "axios": "^1.6.4",
+    "axios": "^1.7.2",
     "firebase": "^10.7.1",
     "framer-motion": "^10.17.4",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-awesome-reveal": "^4.2.7",
     "react-dom": "^18.2.0",
