--- a/backend/package.json
+++ b/backend/package.json
@@ -35,10 +35,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-status-monitor": "^1.3.4",
     "hbs": "^4.2.0",
     "joi": "^17.13.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.1",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.7",
     "nodemailer-express-handlebars": "^6.1.0"
