--- a/backend/package.json
+++ b/backend/package.json
@@ -54,6 +54,7 @@
     "husky": "^9.0.11",
     "lint-staged": "^15.2.2",
     "nodemon": "^3.0.1",
+    "@vitejs/plugin-react": "^4.2.1",
     "plato": "^1.7.0",
     "prettier": "^3.2.5"
   }
