--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.4.2",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
@@ -35,6 +36,8 @@
     "react-scroll": "^1.9.0",
     "react-share": "^5.0.3",
     "react-toastify": "^9.1.3",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^3.1.0",
     "sweetalert2": "^11.10.2",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
